@@ -3,9 +3,7 @@
 
 package dev.vortex.spark;
 
-import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 import java.io.IOException;
 import java.nio.file.Files;
@@ -45,6 +43,7 @@ public final class VortexDataSourceWriteTest {
         spark = SparkSession.builder()
                 .appName("VortexWriteTest")
                 .master("local[2]") // Use 2 threads
+                .config("spark.driver.host", "127.0.0.1")
                 .config("spark.sql.shuffle.partitions", "2")
                 .config("spark.sql.adaptive.enabled", "false") // Disable AQE for predictable partitioning
                 .config("spark.ui.enabled", "false") // Disable UI for tests
@@ -213,8 +212,8 @@ public final class VortexDataSourceWriteTest {
         // Verify vortex files inside partition directories
         List<Path> filesA = findVortexFiles(outputPath.resolve("group=A"));
         List<Path> filesB = findVortexFiles(outputPath.resolve("group=B"));
-        assertTrue(!filesA.isEmpty(), "Partition A should have vortex files");
-        assertTrue(!filesB.isEmpty(), "Partition B should have vortex files");
+        assertFalse(filesA.isEmpty(), "Partition A should have vortex files");
+        assertFalse(filesB.isEmpty(), "Partition B should have vortex files");
 
         // When: read back
         Dataset<Row> readDf = spark.read()
@@ -333,15 +332,15 @@ public final class VortexDataSourceWriteTest {
                         "cast(id as int) as id",
                         "CASE WHEN id = 0 THEN CAST('2024-01-02' AS DATE) ELSE CAST('2024-02-03' AS DATE) END AS event_date",
                         """
-                        CASE WHEN id = 0 THEN CAST('2024-01-02 03:04:05.123456' AS TIMESTAMP)
-                        ELSE CAST('2024-02-03 04:05:06.654321' AS TIMESTAMP) END AS event_ts""",
+                                CASE WHEN id = 0 THEN CAST('2024-01-02 03:04:05.123456' AS TIMESTAMP)
+                                ELSE CAST('2024-02-03 04:05:06.654321' AS TIMESTAMP) END AS event_ts""",
                         """
-                        named_struct(
-                            'event_date', CASE WHEN id = 0 THEN CAST('2024-01-02' AS DATE) ELSE CAST('2024-02-03' AS DATE) END,
-                            'event_ts', CASE WHEN id = 0 THEN CAST('2024-01-02 03:04:05.123456' AS TIMESTAMP)
-                                ELSE CAST('2024-02-03 04:05:06.654321' AS TIMESTAMP) END,
-                            'label', CASE WHEN id = 0 THEN 'alpha' ELSE 'beta' END
-                        ) AS payload""");
+                                named_struct(
+                                    'event_date', CASE WHEN id = 0 THEN CAST('2024-01-02' AS DATE) ELSE CAST('2024-02-03' AS DATE) END,
+                                    'event_ts', CASE WHEN id = 0 THEN CAST('2024-01-02 03:04:05.123456' AS TIMESTAMP)
+                                        ELSE CAST('2024-02-03 04:05:06.654321' AS TIMESTAMP) END,
+                                    'label', CASE WHEN id = 0 THEN 'alpha' ELSE 'beta' END
+                                ) AS payload""");
 
         Path outputPath = tempDir.resolve("temporal_struct_output");
         originalDf
@@ -366,7 +365,7 @@ public final class VortexDataSourceWriteTest {
 
         assertEquals(DataTypes.DateType, readDf.schema().fields()[1].dataType());
         assertEquals(DataTypes.TimestampType, readDf.schema().fields()[2].dataType());
-        assertTrue(readDf.schema().fields()[3].dataType() instanceof StructType);
+        assertInstanceOf(StructType.class, readDf.schema().fields()[3].dataType());
         assertEquals(expectedRows, projectTemporalAndStructRows(readDf));
     }
 
@@ -374,12 +373,12 @@ public final class VortexDataSourceWriteTest {
     @DisplayName("Write TimestampNTZ columns and nested structs")
     public void testWriteTimestampNtzColumns() throws IOException {
         Dataset<Row> timestampNtzDf = spark.range(0, 2).selectExpr("cast(id as int) as id", """
-                        CASE WHEN id = 0 THEN CAST('2024-01-02 03:04:05.123456' AS TIMESTAMP_NTZ)
-                        ELSE CAST(NULL AS TIMESTAMP_NTZ) END AS event_ntz""", """
-                        named_struct(
-                            'event_ntz', CASE WHEN id = 0 THEN CAST('2024-01-02 03:04:05.123456' AS TIMESTAMP_NTZ)
-                                ELSE CAST('2024-02-03 04:05:06.654321' AS TIMESTAMP_NTZ) END
-                        ) AS payload""");
+                CASE WHEN id = 0 THEN CAST('2024-01-02 03:04:05.123456' AS TIMESTAMP_NTZ)
+                ELSE CAST(NULL AS TIMESTAMP_NTZ) END AS event_ntz""", """
+                named_struct(
+                    'event_ntz', CASE WHEN id = 0 THEN CAST('2024-01-02 03:04:05.123456' AS TIMESTAMP_NTZ)
+                        ELSE CAST('2024-02-03 04:05:06.654321' AS TIMESTAMP_NTZ) END
+                ) AS payload""");
 
         Path outputPath = tempDir.resolve("timestamp_ntz_output");
         assertDoesNotThrow(() -> timestampNtzDf
@@ -389,7 +388,7 @@ public final class VortexDataSourceWriteTest {
                 .mode(SaveMode.Overwrite)
                 .save());
 
-        assertTrue(!findVortexFiles(outputPath).isEmpty(), "TimestampNTZ write should create Vortex files");
+        assertFalse(findVortexFiles(outputPath).isEmpty(), "TimestampNTZ write should create Vortex files");
     }
 
     /**
@@ -424,7 +423,7 @@ public final class VortexDataSourceWriteTest {
      */
     private List<Path> findVortexFiles(Path directory) throws IOException {
         if (!Files.exists(directory)) {
-            return Arrays.asList();
+            return List.of();
         }
 
         try (Stream<Path> paths = Files.walk(directory)) {
